=================
Changes for Crate
=================

Unreleased
==========

 - Fixed a race condition that could cause a `REFRESH TABLE` statement to fail
   on partitioned tables

 - Fixed a bug which prevented a retry, or caused a retry to fail if a shard
   was closed because of relocation

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` statements to
   get stuck

 - Fixed a race condition that could cause queries with a high limit to fail
   due to a missing job context.

 - Fixed an issue which could cause an error if a ``group by`` query was killed

 - Fixed an issue that caused COPY TO `s3` statements to get stuck

 - Fixed an issue which results in _id queries not matching on
   partitioned and clustered tables without primary key columns.

 - Updated crate-admin to 0.14.1 which includes following changes:

    - fix: number of underreplicated shards were fetched and displayed incorrectly

 - Fixed issue that could lead to a NullPointerException
   caused by reporting row results to handler node before merge phase on handler
   was started

 - Added a limitation notice that `COPY TO` doesn't work with system tables and
   attempting to do so will result in a more meaningful error.

 - Fixed bulk delete for partitioned tables where partition column was part
   of the where clause

 - Fixed a rare race condition that could cause some queries with offset + limit higher
   than 1_000_000 to return too few rows

 - Fixed an issue that could cause concurrent queries on information_schema or
   sys tables to return inconsistent results

 - Fix: IS NULL predicate in query could return records that have already been
   marked for deletion

 - Fixed a possible race condition which leads to the execution of a
   non-distributed group by instead of a distributed one.

 - Fixed hash collide in fetch requests to avoid collision of node identifiers

 - Fixed an issue that could lead to unclosed contexts when issuing bulk requests
