@@ -23,10 +23,15 @@ package io.crate.integrationtests;
 
 import com.google.common.base.Joiner;
 import com.google.common.base.Predicate;
+import com.google.common.util.concurrent.ListenableFuture;
 import io.crate.TimestampFormat;
 import io.crate.action.sql.SQLActionException;
 import io.crate.action.sql.SQLBulkResponse;
+import io.crate.exceptions.Exceptions;
+import io.crate.exceptions.TableUnknownException;
 import io.crate.executor.TaskResult;
+import io.crate.metadata.TableIdent;
+import io.crate.planner.Plan;
 import io.crate.testing.TestingHelpers;
 import org.elasticsearch.action.admin.cluster.health.ClusterHealthStatus;
 import org.elasticsearch.action.admin.indices.exists.indices.IndicesExistsRequest;
@@ -71,6 +76,23 @@ public class TransportSQLActionTest extends SQLTransportIntegrationTest {
         assertArrayEquals(new String[]{"b", "a"}, response.cols());
         assertEquals(1, response.rowCount());
         assertThat(response.duration(), greaterThanOrEqualTo(0L));
+    }
+
+    @Test
+    public void testTableUnknownExceptionIsRaisedIfDeletedAfterPlan() throws Throwable {
+        expectedException.expect(TableUnknownException.class);
+
+        execute("create table t (name string)");
+        ensureYellow();
+
+        Plan plan = plan("select * from t");
+        execute("drop table t");
+        ListenableFuture<List<TaskResult>> future = execute(plan);
+        try {
+            future.get();
+        } catch (Throwable t) {
+            throw Exceptions.unwrap(t);
+        }
     }
 
     @Test
